# pynamics

./: 643.cpp  643_guide.cpp  README.md  UntitledFramedTexture.pntexture  acac.cpp  aim.py  code.txt  context.py  main.py  main.pyw  main_server.py  nnn.cpp  paren.cpp  permsub.cpp  relizstudio_dumbgame.py  suberb_client.py  superb_server.py  test.py  test_character.py  test_client.py  test_collisions.py  test_fluid.py  test_keypress.py  test_logger.py  test_mac.py  test_math.py  test_particle.py  test_physics.py  test_physics_collision.py  test_pynamics.py  test_pynamics_platformer.py  test_pynamics_superb_game.py  test_server.py  test_smoothblit.py  test_text.py  untitled.pndef  untitled3.cpp  winsound.py  workstation.py
dc/: main.py
example_superb_intro/: main.pyw
pygamepro/: __init__.py  context.py  debugger.py  dimensions.py  gameobject.py  interface.py  listeners.py  physics.py  text.py
pynamics/: Python.h  __init__.py  __main__.py  animation.py  crane.py  debugger.py  dimensions.py  display.py  events.py  gamemanager.py  gameobject.py  interface.py  launcher.py  logger.py  metadata.py  moodle_answer_fetch.js  moodle_hack_enter.js  pyproject.toml  render.c  render.py  render_test.cpp  render_test.pyd  shortcutTODO.pyd  socket.py  styling.py  utils.py
pynamics-builder/: __main__.py  fbo.py  filing.py  launch.py  screen.py
pynamics-editor/: __main__.py  presets.py  projectmaker.py
pynamics/gameobject/: gameobject.py  physics.py
pynamics_legacy/: __init__.py  animation.py  debugger.py  dimensions.py  display.py  events.py  gamemanager.py  gameobject.py  (+9 more)
(+52 files in other folders)
