[tool.poetry]
name = "pynamics"
version = "0.1.0"
description = "A project that uses PyOpenGL and PyOpenGLTk"
authors = ["Relizc"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
PyOpenGL = "^3.1.5"
PyOpenGLTk = "^3.1.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
